--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ ADD_EXECUTABLE(movies
 SET(CURL_LIBRARY "-lcurl")
 FIND_PACKAGE(CURL REQUIRED)
 INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(test ${CURL_LIBRARIES})
+TARGET_LINK_LIBRARIES(movies ${CURL_LIBRARIES})
 
 FIND_PACKAGE(jsoncpp REQUIRED)
 GET_TARGET_PROPERTY(jsoncpp_LIBRARIES jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
 INCLUDE_DIRECTORIES(${jsoncpp_LIBRARIES})
-TARGET_LINK_LIBRARIES(test jsoncpp)
+TARGET_LINK_LIBRARIES(movies jsoncpp)
