Google test set-up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,15 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_CXX_STANDARD 11)
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
+ADD_SUBDIRECTORY(${CMAKE_BINARY_DIR}/googletest)
+
 ADD_EXECUTABLE(movies
     src/main.cpp
     src/movies.cpp
+)
+
+ADD_EXECUTABLE(test
+    tests/test.cpp
 )
 
 SET(CURL_LIBRARY "-lcurl")
@@ -17,3 +23,6 @@ FIND_PACKAGE(jsoncpp REQUIRED)
 GET_TARGET_PROPERTY(jsoncpp_LIBRARIES jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
 INCLUDE_DIRECTORIES(${jsoncpp_LIBRARIES})
 TARGET_LINK_LIBRARIES(movies jsoncpp)
+
+TARGET_LINK_LIBRARIES(test gtest)
+TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
